alignment fixes

--- a/app/assets/stylus/styles/icon.styl
+++ b/app/assets/stylus/styles/icon.styl
@@ -61,8 +61,6 @@
       margin-right b3
     &:hover:not(.button)
       opacity 0.4
-    &.line
-      width b1
 
   &.edit
   &.edit:hover
