--- a/app/assets/volume/excerpts.styl
+++ b/app/assets/volume/excerpts.styl
@@ -22,16 +22,20 @@
   font-weight normal
   margin-top 0
   font-line 1
-  font-size 1
   padding-left f8
   text-overflow ellipsis
   overflow hidden
 
+  span
+    vertical-align super
   img
     width auto
+    height 18px
     float left
     margin-right f6
     margin-top f6
+  .icon.release
+    margin-top 1px
 
 .panel-excerpts-list
   figure
